<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".VOLLEY.DetailActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="110dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/poster_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shadow_effect"
                    android:contentDescription="@string/todo"
                    tools:ignore="ImageContrastCheck" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/poster_image_small"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="125dp"
                    android:contentDescription="@string/todo"
                    app:shapeAppearanceOverlay="@style/roundimageview"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/animeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="135dp"
                    android:layout_marginEnd="10dp"
                    android:maxLines="3"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="249dp"
                    android:text="@string/releaseddate"
                    android:textColor="#FFC107" />

                <TextView
                    android:id="@+id/originalLanguageBefore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="275dp"
                    android:drawableLeft="@drawable/baseline_done_all_24"
                    android:drawablePadding="3dp"
                    android:text="@string/released_imdb_en"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="345dp"
                    android:layout_marginEnd="15dp"
                    android:lineSpacingExtra="8sp"
                    android:maxLines="5"
                    android:textColor="#C8FFFFFF"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/backButton"
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="45dp"
                    android:backgroundTint="#C8000000"
                    android:contentDescription="@string/backbutton"
                    android:padding="12dp"
                    app:icon="@drawable/baseline_close_20_new"
                    app:itemRippleColor="@android:color/transparent"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/bottom_background"
        android:elevation="15dp"
        app:itemIconSize="20dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:menu="@menu/bottom_menu_video"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>